[package]
name = "twitter-sentiment-graphs"
version = "0.1.0"
authors = ["That3Percent <that3percent@gmail.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
twitter-stream = "0.9"
crossbeam-channel = "0.3"
itertools = "0.8.1"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
async-std = "0.99"